--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "npm-run-all -p server:*",
+    "server:api": "node server.js",
+    "server:dev": "webpack-dev-server --mode development --open --hot",
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "webpack --mode production",
@@ -25,7 +27,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
@@ -33,6 +35,7 @@
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.3",
+    "json-server": "^0.16.1",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
@@ -53,23 +56,24 @@
     "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
+    "@types/jest": "22.2.3",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "babel-jest": "^24.9.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "jest-css-modules": "^2.0.0",
+    "jest": "^24.9.0",
+    "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom-fourteen": "^0.1.0",
     "jest-prop-type-error": "^1.1.0",
-    "jest-resolve": "^24.8.0",
+    "jest-resolve": "^24.9.0",
     "jest-watch-typeahead": "^0.3.1",
-    "@types/jest": "22.2.3",
     "lint-staged": "^8.1.5",
-    "react-test-renderer": "^16.8.6",
+    "npm-run-all": "^4.1.5",
+    "react-test-renderer": "^16.13.1",
     "redux-devtools-extension": "^2.13.8",
     "webpack-dev-server": "^3.3.1"
   }
